--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
     position:fixed;
     width:100%;
     padding: 15px 0;
+    z-index: 999;
     /*background: #181d26;*/
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.2s ease;
@@ -115,10 +116,118 @@
 }
 
 
+/*The about page*/
+section{
+    padding: 100px 0;
+
+}
+.about{
+    
+    font-family: 'Poppins',sans-serif;
+}
+
+.about .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu',sans-serif;
+}
+
+.about .title::before{
+    content: "";
+    position: absolute;
+    height: 3px;
+    background: #111;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    transform: translateX(-50%);
+}
+
+.about .title::after{
+    content: "who i am";
+    font-size: 20px;
+    position: absolute;
+    color: crimson;
+    padding: 5px;
+    background: #fff;
+    bottom: -12px;
+    left: 50%;
+    
+    transform: translateX(-50%);
+}
+.about .about-content{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.about .about-content .left{
+   width: 45%;
+}
+
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.about .about-content .right{
+    width: 55%;
+ }
+
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+ }
+
+.about .about-content .right p{
+     text-align: justify;
+ }
+
+.about .about-content .right a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.4s ease;
+    text-align: justify;
+}
+
+.about .about-content .right a:hover{
+    color: crimson;
+    background: none;
+}
+
+
+
+
+
+
+
+
+
 /*Responsive part*/
-@media (max-width: 1104px){
+@media (max-width: 1300px){
     .home .max-width{
         margin-left: 0px;
+    }
+}
+
+@media (max-width: 1104px){
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
     }
 }
 
@@ -164,9 +273,24 @@
         font-size: 70px;
     
     }
+    .max-width{
+        max-width: 800px;
+    }
     .home .home-content .text-3{
         font-size: 35px;
     }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
+    }
+    
 }
 
 @media (max-width: 690px){
