--- a/style.css
+++ b/style.css
@@ -115,18 +115,13 @@
     font-weight:500;
 }
 
-
-/*The about page*/
+/*The similar styling code - For the content material*/
 section{
     padding: 100px 0;
 
 }
-.about{
-    
-    font-family: 'Poppins',sans-serif;
-}
 
-.about .title{
+section .title{
     position: relative;
     text-align: center;
     font-size: 40px;
@@ -136,7 +131,7 @@ section{
     font-family: 'Ubuntu',sans-serif;
 }
 
-.about .title::before{
+section .title::before{
     content: "";
     position: absolute;
     height: 3px;
@@ -147,8 +142,7 @@ section{
     transform: translateX(-50%);
 }
 
-.about .title::after{
-    content: "who i am";
+section .title::after{
     font-size: 20px;
     position: absolute;
     color: crimson;
@@ -159,7 +153,19 @@ section{
     
     transform: translateX(-50%);
 }
-.about .about-content{
+/*The about page*/
+
+.about, .projects{
+    
+    font-family: 'Poppins',sans-serif;
+}
+
+
+.about .title::after{
+    content: "who i am";
+}
+.about .about-content, 
+.projects .projects-content{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -209,10 +215,46 @@ section{
     background: none;
 }
 
+/*The Projects section*/
+.projects{
+    color:#fff;
+    background: #111;
+}
 
+.projects .title::before{
+    background: #fff;
+}
 
+.projects .title::after{
+    background: #111;
+    content: "highlights";
+}
 
+.projects .projects-content .card{
+    width: calc(33% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.projects .projects-content .card:hover{
+    background: grey;
+}
+.projects .projects-content .card .box{
+    transition: all 0.3s ease;
+    height: 250px;
+}
+.projects .projects-content .card:hover .box{
+    transform: scale(1.05);
+}
 
+.projects .projects-content .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
 
 
 
@@ -290,6 +332,10 @@ section{
     .about .about-content .right{
         flex: 100%;
     }
+    .projects .projects-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
     
 }
 
@@ -303,6 +349,10 @@ section{
     }
     .home .home-content .text-3{
         font-size: 32px;
+    }
+    .projects .projects-content .card{
+        width: 100%;
+    
     }
 }
 
