Skills set  DONE

--- a/style.css
+++ b/style.css
@@ -120,6 +120,19 @@ section{
     padding: 100px 0;
 
 }
+.about, .projects, .skills{
+    
+    font-family: 'Poppins',sans-serif;
+}
+
+.about .about-content, 
+.projects .projects-content,
+.skills .skills-content{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
 section .title{
     position: relative;
@@ -155,22 +168,11 @@ section .title::after{
 }
 /*The about page*/
 
-.about, .projects{
-    
-    font-family: 'Poppins',sans-serif;
-}
-
 
 .about .title::after{
     content: "who i am";
 }
-.about .about-content, 
-.projects .projects-content{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
+
 
 .about .about-content .left{
    width: 45%;
@@ -257,6 +259,80 @@ section .title::after{
 }
 
 
+/*The Skills section*/
+
+.skills .title::after{
+    content: "learning!";
+}
+
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
+
+.skills .skills-content .left .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .left p{
+    text-align: justify;
+}
+
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+.skills .skills-content .right .info{
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgb(20, 220, 97);
+}
+
+.skills-content .right .html::before{
+    width: 60%;
+}
+
+.skills-content .right .python::before{
+    width: 45%;
+}
+
+.skills-content .right .c::before{
+    width: 50%;
+}
+
+.skills-content .right .rdbms::before{
+    width: 65%;
+}
+
+
+
+
+
+
+
+
 
 
 /*Responsive part*/
@@ -335,6 +411,10 @@ section .title::after{
     .projects .projects-content .card{
         width: calc(50% - 10px);
         margin-bottom: 20px;
+    }
+    .skills .skills-content .column{
+        width: 100%;
+        margin-bottom: 32px;
     }
     
 }
