--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
 
 }
 
+html{
+    scroll-behavior: smooth;
+}
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
@@ -79,6 +82,31 @@
     
 }
 
+.scroll-up-btn{
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: crimson;
+    right:30px;
+    bottom:10px;
+    text-align: center;
+    line-height: 45px;
+    color: white;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s ease;
+}
+
+.scroll-up-btn.show{
+    opacity: 1;
+    pointer-events: auto;
+    bottom: 30px;
+
+}
 
 /* NOW WE DIVE INTO THE FRONT SCREEN CODE */
 .home{
@@ -120,7 +148,7 @@ section{
     padding: 100px 0;
 
 }
-.about, .projects, .skills, .contact{
+.about, .projects, .skills, .contact, footer{
     
     font-family: 'Poppins',sans-serif;
 }
@@ -435,6 +463,22 @@ section .title::after{
     background: none;
 }
 
+/*FOOTER pART*/
+footer{
+    background: black;
+    padding: 20px 23px;
+    color: white;
+    
+}
+
+footer span a{
+    color: crimson;
+    text-decoration: none;
+}
+
+footer span a:hover{
+    text-decoration: underline;
+}
 
 
 
